Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/DuplicateResourceDecl.out
DuplicateResourceDecl.java:12:56: compiler.err.already.defined: kindname.variable, c, kindname.method, main(java.lang.String[])
1 error
